# Python-Regex

./: .gitignore  Cargo.toml  README.md  pyproject.toml  regex.pyi  requirements.txt
.github/workflows/: ci.yml
regex/: __init__.py  regex.cp38-win_amd64.pyd
src/: lib.rs
tests/: timer.py
